# UART_Exchange

./: CMakeLists.txt  Doxyfile  README.md
hal/uart/: CMakeLists.txt  hal_uart.h
task/: CMakeLists.txt
task/conf/: uart_exchange_conf.h
task/inc/: uart_exchange.h
task/src/: uart_exchange.c
task/test/: uart_exchange_test.c
task/test/mock/hal_uart/: CMakeLists.txt
task/test/mock/hal_uart/inc/: hal_uart_mock.h
task/test/mock/hal_uart/src/: hal_uart_mock.c
